--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 derive_more = "0.99"
 bigdecimal = { version = "0.4", features = ["serde"] }
 hyper = { version = "1.0.0-rc.3", features = ["full"] }
+askama = "0.12"
 
 [[bin]]
 name = "pereval-backend"
