Выполнены миграции: drop all, initial schema, import data. Проверено наличие объектов в БД.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ derive_more = "0.99"
 bigdecimal = { version = "0.4", features = ["serde"] }
 hyper = { version = "1.0.0-rc.3", features = ["full"] }
 askama = "0.12"
+num-traits = "0.2"
 
 [[bin]]
 name = "pereval-backend"
